<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".changerate">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/rate1"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="TextView" />

        <EditText
            android:id="@+id/change1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/dollar" />

        <TextView
            android:id="@+id/rate2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="TextView" />

        <EditText
            android:id="@+id/change2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/euro" />

        <TextView
            android:id="@+id/rate3"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="TextView" />

        <EditText
            android:id="@+id/change3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/jpny" />

        <Button
            android:id="@+id/save"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SAVE"
            android:onClick="save"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>